# ai-augmented-e2e-testing

./: .env.example  .gitignore  CODEGEN_COMPLETE_WORKFLOW.md  CODEGEN_USAGE.md  ERROR_FILTERING_ARCHITECTURE.md  ERROR_REPORTING_GUIDE.md  PROJECT_SUMMARY.md  README.md  TEST_FAILURES_TRACKER.md  TEST_FIX_SUMMARY.md  USAGE_QUICK_START.md  VISUAL_TESTING.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements-py314.txt  requirements.txt  setup.sh  test_demo_simple.py
.claude/: settings.local.json
docs/: ARCHITECTURE.md  ASSERTIONS_SUMMARY.md  CODEGEN_RESULTS.md  COMPLETED_WORK_SUMMARY.md  MCP_INTEGRATION_GUIDE.md  MCP_SETUP_GUIDE.md  SETUP.md  TEST_SUITE_SUMMARY.md
scripts/: add_assertions.py  discover_selectors.py  generate_error_reports.py  record_test.sh  run_codegen.sh
src/ai/: anomaly_detector.py  coverage_analyzer.py  self_healing.py  test_generator.py  visual_ai.py
src/config/: constants.py  settings.py
src/mcp/: codegen_workflow.py  debug_helper.py  integration.py  selector_discovery.py
src/reporting/: __init__.py  error_reporter.py
test_data/: coverage.json  discovered_selectors.json  mcp_camry_discovery.json  selectors.json
tests/: test_ai_features.py  test_homepage.py  test_self_healing_demo.py  test_vehicles.py
tests/ai_generated/: test_.py  test_build_and_price.py  test_camry_features_enhanced_with_ai.py  test_certified_preowned.py  test_compare_vehicles.py  test_configurator.py  test_configurator_rav4_suvs.py  test_configurator_recorded.py  test_corolla_page.py  test_dealers.py  test_finance_calculator.py  test_homepage.py  test_hybrid_electric.py  test_mobile_responsiveness.py  test_rav4_page.py  test_search_inventory.py  test_shopping_navigation.py  test_special_offers.py  test_vehicles.py  (+1 more)
tests_simple/: conftest.py  test_simple_homepage.py
(+10 files in other folders)
